@@ -1,10 +1,4 @@
 [% INCLUDE 'web_2_head.tmpl' %]
-<script type="text/javascript">
-$(document).ready(function() {
-	$('body').load("[% host %]/[% lang %]/splash.html");
-	$('body').addClass('toc_embeded');
-});
-
-</script>
+[% splash %]
 [% INCLUDE 'web_2_footer.tmpl' %]
 
