@@ -27,6 +27,8 @@ NEXT UNRELEASED
 - Enforce RPM API requirements. BZ #1029293
 - Fix desktop SPEC file creation. BZ #1081087
 - Pass previous option to msgmerge. BZ #1081363
+- Load splash pages in templates instead of using javascript. BZ #1081300
+	TOTO: Update Brand templates.
 
 4.0.0 Wed Dec 18 2013
 - Support DocBook 5 as input format. BZ #1005042
